@@ -10,13 +10,13 @@ Version 2.21
 * The following bugs are resolved with this release:
 
   6652, 10672, 12847, 12926, 13862, 14132, 14138, 14171, 14498, 15215,
-  15884, 16469, 16617, 16619, 16657, 16740, 16857, 17192, 17266, 17344,
-  17363, 17370, 17371, 17411, 17460, 17475, 17485, 17501, 17506, 17508,
-  17522, 17555, 17570, 17571, 17572, 17573, 17574, 17581, 17582, 17583,
-  17584, 17585, 17589, 17594, 17601, 17608, 17616, 17625, 17630, 17633,
-  17634, 17647, 17653, 17657, 17664, 17665, 17668, 17682, 17717, 17719,
-  17722, 17723, 17724, 17725, 17732, 17733, 17744, 17745, 17746, 17747,
-  17775, 17780, 17781, 17782
+  15884, 16191, 16469, 16617, 16619, 16657, 16740, 16857, 17192, 17266,
+  17344, 17363, 17370, 17371, 17411, 17460, 17475, 17485, 17501, 17506,
+  17508, 17522, 17555, 17570, 17571, 17572, 17573, 17574, 17581, 17582,
+  17583, 17584, 17585, 17589, 17594, 17601, 17608, 17616, 17625, 17630,
+  17633, 17634, 17647, 17653, 17657, 17664, 17665, 17668, 17682, 17717,
+  17719, 17722, 17723, 17724, 17725, 17732, 17733, 17744, 17745, 17746,
+  17747, 17775, 17780, 17781, 17782
 
 * i386 memcpy functions optimized with SSE2 unaligned load/store.
 
